# pretty-url

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  conanfile-docker.txt  conanfile.txt
cmake/: create_version_file.cmake
configs/: app-config.json
docker/: Dockerfile
include/prettyurl/: app.hpp  version.hpp
include/prettyurl/app/cli/: cli_parser.hpp
include/prettyurl/app/handlers/: redirect_handler.hpp  url_shortener_handler.hpp
include/prettyurl/app/logging/: log-inl.hpp
include/prettyurl/app/logging/details/: registry.hpp
include/prettyurl/app/services/: redirect_url_service.hpp  url_shortener_service.hpp
include/prettyurl/core/caching/: base_cache.hpp
include/prettyurl/core/config/: app_config.hpp  cache_config.hpp  db_config.hpp  logging_config.hpp  server_config.hpp
include/prettyurl/core/db/: base_db_session.hpp  db_session_holder.hpp  db_session_manager.hpp  kv_db_session.hpp  query_result_set.hpp  sql_db_session.hpp
include/prettyurl/core/encoding/: base62_encoder.hpp  base_encoder.hpp
include/prettyurl/core/id/: base_id_generator.hpp
include/prettyurl/core/logging/: base_logger.hpp  common.hpp  logger.hpp
include/prettyurl/core/logging/loggers/: null_logger.hpp
include/prettyurl/core/net/: base_listener.hpp  request_handler.hpp
include/prettyurl/core/net/http/: base_request.hpp  base_response.hpp  base_server.hpp  base_session.hpp  common.hpp  route_matcher.hpp
include/prettyurl/core/repositories/: url_repository.hpp
include/prettyurl/core/utility/: string_utils.hpp  url_validator.hpp
include/prettyurl/infra/caching/: redis_cache.hpp
include/prettyurl/infra/config/: json_config_parser.hpp
include/prettyurl/infra/db/: auto_inc_id_generator.hpp  pg_connect_string_builder.hpp  pg_session.hpp
include/prettyurl/infra/db/repository/: pg_url_repository_impl.hpp
include/prettyurl/infra/logging/loggers/: console_logger.hpp  file_logger.hpp  spd_logger_impl.hpp
include/prettyurl/infra/net/: common.hpp  listener.hpp
include/prettyurl/infra/net/http/: common.hpp  request.hpp  responders.hpp  response.hpp  route.hpp  router.hpp  server.hpp  session.hpp
include/prettyurl/utils/: format.hpp
migrations/: 001_create_url_mapping_table.up.sql
src/: app.cpp  main.cpp
src/app/cli/: cli_parser.cpp
src/app/handlers/: redirect_handler.cpp  url_shortener_handler.cpp
src/app/logging/details/: registry.cpp
src/app/services/: redirect_url_service.cpp  url_shortener_service.cpp
src/core/db/: query_result_set.cpp
src/core/encoding/: base62_encoder.cpp
src/core/logging/: base_logger.cpp
src/core/net/http/: route_matcher.cpp
src/core/utility/: url_validator.cpp
src/infra/caching/: redis_cache.cpp
src/infra/config/: json_config_parser.cpp
src/infra/db/: auto_inc_id_generator.cpp  pg_connect_string_builder.cpp  pg_session.cpp
src/infra/db/repository/: pg_url_repository_impl.cpp
src/infra/logging/loggers/: console_logger.cpp  file_logger.cpp
src/infra/net/http/: request.cpp  response.cpp  route.cpp  router.cpp
tests/: CMakeLists.txt  Makefile
tests/mocks/: in_memory_url_repository_impl.hpp
tests/unit/app/services/: redirect_url_service_tests.cpp  url_shortener_service_tests.cpp
tests/unit/core/db/: db_session_manager_tests.cpp  query_result_set_tests.cpp
tests/unit/core/encoding/: base62_encoder_tests.cpp
tests/unit/core/net/http/: route_matcher_tests.cpp
tests/unit/core/repositories/: url_repository_tests.cpp
tests/unit/core/utility/: string_utils_tests.cpp  url_validator_tests.cpp
tests/unit/infra/net/http/: route_tests.cpp  router_tests.cpp
